docker/kubernetes/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: plugin-jam-system
  labels:
    app: game-jam-system
